--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <div class="menu">
     <header>
         <h1>SELLIE CAFE</h1>
-        <p>Est . 2020</p>
+        <p class="established">Est . 2020</p>
     </header>
+    <hr/>
     <main>
         <section>
            
             <h2>Coffee</h2>
+            <img src="download.png" alt="coffee icon" class="small-img">
             <article class="item">
                 <p class="flavor">French Vanilla</p><p class="price">3.00</p>
               </article>
@@ -36,6 +38,7 @@
               </article>
               <section>
                 <h2>Desserts</h2>
+                <img src="download (2).png" alt="dessert icon" class="small-image">
                 <article class="item">
                     <p class="dessert">Donut</p><p class="price">1.50</p>
                 </article>
@@ -51,6 +54,13 @@
             </section>
         </section>
     </main>
+<hr class="bottom-line"/>
+    <footer>
+        <p>
+            <a href="file:///C:/Users/VALERIE/cafe%20menu(html%26css)/index.html">Visit our website</a>
+        </p>
+        <p class="address">Coffee Place</p>
+    </footer>
 </div>
 </body>
 </html>
