--- a/index.html
+++ b/index.html
@@ -22,34 +22,34 @@
             <h2>Coffee</h2>
             <img src="download.png" alt="coffee icon" class="small-img">
             <article class="item">
-                <p class="flavor">French Vanilla</p><p class="price">3.00</p>
+                <p class="flavor">French Vanilla</p><p class="price">Ksh 340</p>
               </article>
               <article class="item">
-                <p class="flavor">Caramel Macchiato</p><p class="price">3.75</p>
+                <p class="flavor">Caramel Macchiato</p><p class="price">Ksh 200</p>
               </article>
               <article class="item">
-                <p class="flavor">Pumpkin Spice</p><p class="price">3.50</p>
+                <p class="flavor">Pumpkin Spice</p><p class="price">Ksh 300</p>
               </article>
               <article class="item">
-                <p class="flavor">Hazelnut</p><p class="price">4.00</p>
+                <p class="flavor">Hazelnut</p><p class="price">Ksh 400</p>
                </article>
                <article class="item">
-                <p class="flavor">Mocha</p><p class="price">4.50</p>
+                <p class="flavor">Mocha</p><p class="price">Ksh 300</p>
               </article>
               <section>
                 <h2>Desserts</h2>
                 <img src="download (2).png" alt="dessert icon" class="small-image">
                 <article class="item">
-                    <p class="dessert">Donut</p><p class="price">1.50</p>
+                    <p class="dessert">Donut</p><p class="price">Ksh 100</p>
                 </article>
                 <article class="item">
-                    <p class="dessert">Cinnamon Roll</p><p class="price">3.00</p>
+                    <p class="dessert">Cinnamon Roll</p><p class="price">Ksh 300</p>
                 </article>
                 <article class="item">
-                    <p class="dessert">Cheesecake</p><p class="price">3.00</p>
+                    <p class="dessert">Cheesecake</p><p class="price">Ksh 140</p>
                 </article>
                 <article class="item">
-                    <p class="dessert">Cinnamon Roll</p><p class="price">2.50</p>
+                    <p class="dessert">Cinnamon Roll</p><p class="price">Ksh 200</p>
                 </article>
             </section>
         </section>
